--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 asyncio = "3.4.3"
 beautifulsoup4 = "4.12.2"
 colorama = "0.4.6"
@@ -32,6 +32,7 @@ PyMuPDF = "1.23.6"
 requests = "2.31.0"
 jinja2 = "3.1.2"
 aiofiles = "23.2.1"
+langchain-google-genai = "^0.0.9"
 
 
 [build-system]
